samples/_failures_safe/1761474915_5d5076_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7906c72f.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_7906c72f.c:175:25: error: missing terminating " character
  175 |         default: return "
      |                         ^
./samples/SAFE/__tmp_7906c72f.c:175:9: error: expected expression at end of input
  175 |         default: return "
      |         ^~~~~~~
./samples/SAFE/__tmp_7906c72f.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7906c72f.c:175:9: error: expected declaration or statement at end of input
